BAEL-8198: code examples